--- a/angular/src/app/shared-components/user-card/user-card.component.scss
+++ b/angular/src/app/shared-components/user-card/user-card.component.scss
@@ -40,6 +40,7 @@ table {
     height: 50px;
     border-radius: 50%;
     box-shadow: 1px 8px 20px gray !important;
+
   }
 }
 
@@ -62,6 +63,16 @@ table {
   }
 }
 
+@media (max-width: 576px) {
+  .card-title,
+  .card-text {
+    font-size: 0.9rem;
+  }
+  #actions_btns .btn {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.8rem;
+  }
+}
 
 
 
