--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
@@ -3,15 +3,6 @@
   backdrop-filter: blur(100px);
   background-color: rgba(255, 255, 255, 0);
   color: white;
-  input.ng-invalid.ng-touched {
-    border-color: red;
-  }
-  textarea.ng-invalid.ng-touched {
-    border-color: red;
-  }
-  p {
-    margin: 0 0.3em;
-  }
   padding-bottom: 2vh;
 }
 
@@ -20,6 +11,9 @@ input,textarea{
   background-color: rgba(128, 128, 128, 0.486);
   border: 1px solid black;
   color: white;
+  p {
+    margin: 0 0.3em;
+  }
   &:focus{
     background-color: rgba(128, 128, 128, 0);
     color: white;
@@ -27,6 +21,12 @@ input,textarea{
   }
   &::placeholder{
     color: white;
+  }
+  &.ng-invalid.ng-touched {
+    border-color: red;
+  }
+  &.ng-invalid.ng-touched {
+    border-color: red;
   }
 }
 input[type="file"] {
