refactor: Update styles and HTML structure for user card component, favourites component, and footer component

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -74,8 +74,17 @@
     <div class="col-12">
       <h2>LIGHT NOVEL DI STO CA..</h2>
     </div>
-    <div class="col" *ngFor="let lightNovel of filteredLightNovelsArray">
-      <app-card-home [lightNovelCard]="lightNovel"></app-card-home>
+    <div
+      class="col"
+      *ngFor="let lightNovel of filteredLightNovelsArray; let i = index"
+    >
+      <app-card-home
+        [lightNovelCard]="lightNovel"
+        [ngStyle]="{
+          position: 'relative',
+          'z-index': filteredLightNovelsArray.length - i
+        }"
+      ></app-card-home>
     </div>
   </div>
 </div>
