--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,13 +1,20 @@
 <div class="card d-flex align-items-center my-3 flex-row">
-  <a routerLink="/lightNovelDetails/{{ lightNovelCard.id }}">
+  <a class="img-link" routerLink="/lightNovelDetails/{{ lightNovelCard.id }}">
     <img
+      (mousemove)="updateTooltipPosition($event)"
       [src]="
         '../../../assets/img/lightNovelImg/' + lightNovelCard.slug + '.png'
       "
       class="card-img-left"
       alt="{{ lightNovelCard.title }}"
+      #img
     />
   </a>
+  <app-tooltip-card
+    [lightNovelCard]="lightNovelCard"
+    [ngStyle]="{ top: tooltipY + 'px', left: tooltipX + 'px' }"
+  ></app-tooltip-card>
+
   <div
     class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
   >
@@ -26,5 +33,4 @@
       <p class="card-text">{{ lightNovelCard.author }}</p>
     </div>
   </div>
-  <app-tooltip-card [lightNovelCard]="lightNovelCard"></app-tooltip-card>
 </div>
