navbar e footer completate

--- a/angular/src/app/main-components/footer/footer.component.html
+++ b/angular/src/app/main-components/footer/footer.component.html
@@ -1,7 +1,9 @@
-<footer class="d-flex justify-content-center align-items-center py-3 bg-light">
-  <p class="text-center text-body-secondary mb-0">
-    © {{ currentYear }}
-    <a class="text-black" href="https://github.com/mrz1mm">mr_z1m BLABLA</a>,
-    all rights reserved.
+<footer class="d-flex justify-content-center align-items-center py-3">
+  <p class="text-center mb-0">
+    © {{ currentYear }} <a href="https://github.com/mrz1mm">mr_z1m</a>,
+    <a href="https://github.com/shauniif">shauniif</a>,
+    <a href="https://github.com/MANTRAAAH">MANTRAAAH</a>,
+    <a href="https://github.com/mirko-amoroso">Mirko-amoroso</a>,
+    <a href="https://github.com/Frattins">Frattins</a>, all rights reserved.
   </p>
 </footer>
