--- a/angular/src/app/main-components/footer/footer.component.scss
+++ b/angular/src/app/main-components/footer/footer.component.scss
@@ -1,6 +1,11 @@
 footer {
   height: 14vh;
+  background-color: #242726;
+  p {
+    color: #d0a905
+  }
   a {
     text-decoration: none;
+    color: #f2c506
   }
 }
