--- a/angular/src/app/main-components/header/header.component.scss
+++ b/angular/src/app/main-components/header/header.component.scss
@@ -1,15 +1,35 @@
+
 .navbar {
-  height: 6vh;
-  li a {
-    color: black;
+  // height: 6vh;
+  background-color: #242726;
+  padding: 0 1.3em;
+  a {
+    color: #f2c506
+  }
+  .bi.bi-list {
+    color: #f2c506;
+    font-size: 1.5em;
   }
 
   img {
     height: 50px;
     width: 50px;
   }
-
   .active {
     font-weight: bold;
+  }
+}
+
+input {
+  background-color: rgba(128, 128, 128, 0.486);
+  border: 1px solid black;
+  color: white;
+  &:focus{
+    background-color: rgba(128, 128, 128, 0);
+    color: white;
+
+  }
+  &::placeholder{
+    color: white;
   }
 }
