--- a/angular/src/app/pages/home/home.component.scss
+++ b/angular/src/app/pages/home/home.component.scss
@@ -1,5 +1,8 @@
 .container-fluid {
   min-height: 80vh;
+  background-image: url('../../../assets/img/pages/home.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
 
   ul,
   li {
