--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,9 +1,4 @@
-<div
-  class="container-fluid"
-  [ngStyle]="{
-    backgroundImage: 'url()'
-  }"
->
+<div class="container-fluid">
   <div class="row">
     <div class="col-12">
       <h2>AREA CAROSELLO</h2>
