--- a/angular/src/app/shared-components/confirm-dialog/confirm-dialog.component.html
+++ b/angular/src/app/shared-components/confirm-dialog/confirm-dialog.component.html
@@ -1,20 +1,34 @@
-<h1 mat-dialog-title *ngIf="step === 1">Conferma Eliminazione</h1>
-<h1 mat-dialog-title *ngIf="step === 2">Conferma Finale</h1>
+<div class="bg">
+  <h1 mat-dialog-title *ngIf="step === 1">Conferma Eliminazione</h1>
+  <h1 mat-dialog-title *ngIf="step === 2">Conferma Finale</h1>
 
-<div mat-dialog-content *ngIf="step === 1">
-  <p>
-    Guarda stai per eliminare una light novel, il processo è irreversibile. Sei
-    proprio sicuro?
-  </p>
-</div>
-<div mat-dialog-content *ngIf="step === 2">
-  <p>
-    Sei proprio sicuro di voler eliminare questa light novel? L'azione è
-    irreversibile.
-  </p>
-</div>
+  <div mat-dialog-content *ngIf="step === 1">
+    <p>
+      Guarda stai per eliminare una light novel, il processo è irreversibile.
+      Sei proprio sicuro?
+    </p>
+  </div>
+  <div mat-dialog-content *ngIf="step === 2">
+    <p>
+      Sei proprio sicuro di voler eliminare questa light novel? L'azione è
+      irreversibile.
+    </p>
+  </div>
 
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No</button>
-  <button mat-button (click)="onYesClick()">Si</button>
+  <div mat-dialog-actions>
+    <button
+      class="btn btn-outline-warning mx-2"
+      mat-button
+      (click)="onNoClick()"
+    >
+      No
+    </button>
+    <button
+      class="btn btn-outline-warning mx-2"
+      mat-button
+      (click)="onYesClick()"
+    >
+      Si
+    </button>
+  </div>
 </div>
