--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -5,8 +5,7 @@
   }"
 >
   <div class="row">
-    <div class="col-12">
-      <h2>AREA CAROSELLO</h2>
+    <div class="col-12 px-0">
       <splide class="d-none d-lg-block">
         <splide-slide *ngFor="let lightNovel of lightNovelsArray">
           <a routerLink="/lightNovelDetails/{{ lightNovel.id }}">
