--- a/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
+++ b/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
@@ -1,20 +1,18 @@
 <div class="container-fluid">
   <div class="row">
-    <div *ngFor="let novel of novels" class="col">
-      <div
-        class="card d-flex align-items-center my-3 flex-row overflow-hidden card"
-      >
+    <div
+      *ngFor="let novel of novels"
+      class="col-12 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center"
+    >
+      <div class="card mb-3" style="max-width: 18rem; margin: 1rem">
         <a routerLink="/lightNovelDetails/{{ novel.id }}">
           <img
             [src]="'../../../assets/img/lightNovelImg/' + novel.slug + '.png'"
-            class="card-img-left"
+            class="card-img-top img-fluid"
             alt="{{ novel.title }}"
-            id="img"
           />
         </a>
-        <div
-          class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
-        >
+        <div class="card-body">
           <div class="d-flex align-items-center text-white">
             <a id="no_line" routerLink="/lightNovelDetails/{{ novel.id }}">
               <h5 class="card-title text-white">{{ novel.title }}</h5>
