refactor: Update styles and HTML structure for user card component, favourites component, and footer component

--- a/angular/src/app/main-components/header/header.component.html
+++ b/angular/src/app/main-components/header/header.component.html
@@ -100,14 +100,14 @@
         <div ngbDropdown class="d-inline-block" placement="bottom-end">
           <button
             type="button"
-            class="btn"
+            class="btn btn-outline-warning"
             id="dropdownBasic1"
             ngbDropdownToggle
           ></button>
           <div
             ngbDropdownMenu
             aria-labelledby="dropdownBasic1"
-            class="dropdown-menu-end"
+            class="dropdown-menu-end bg-warning"
           >
             <button ngbDropdownItem routerLink="/profile">Profile</button>
             <hr />
