--- a/angular/src/app/pages/light-novel-details/light-novel-details.component.html
+++ b/angular/src/app/pages/light-novel-details/light-novel-details.component.html
@@ -7,38 +7,60 @@
       backgroundSize: 'cover',
   }"
 >
-  <div class="row">
-    <div class="col d-flex justify-content-center my-5">
-      <div class="card">
-        <div class="card-body d-flex flex-column align-items-center mt-4">
-          <h5 class="card-title mb-2">Titolo: {{ lightNovel.title }}</h5>
-          <p class="card-text">{{ lightNovel.plot }}</p>
+  <div class="row mx-4">
+    <p class="text-dark">
+      {{ "url(/assets/img/lightNovelImg/" + lightNovel.slug + ".png)" }},
+    </p>
+    <div class="col d-flex justify-content-center">
+      <div class="card text-light">
+        <div
+          class="card-body d-flex flex-column align-items-center mt-2 p-0 text-center mx-3 mb-2"
+        >
+          <h2 class="card-title mb-2">{{ lightNovel.title }}</h2>
+          <p class="card-text testoLexend">{{ lightNovel.plot }}</p>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Part 1 -->
-  <div class="row" *ngIf="currentPart === 'part1'">
-    <div class="col">
-      <p>{{ lightNovel.story.part1 }}</p>
-      <button class="btn btn-primary" (click)="chooseFirstChoice('choice1')">
+  <div class="row m-auto text-center" *ngIf="currentPart === 'part1'">
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-100 m-auto mt-2 mb-5">{{ lightNovel.story.part1 }}</p>
+      <button
+        class="btn btn-outline-warning fw-bold mb-2 w-50 m-auto"
+        (click)="chooseFirstChoice('choice1')"
+      >
         {{ lightNovel.story.firstChoice.choice1 }}
       </button>
-      <button class="btn btn-primary" (click)="chooseFirstChoice('choice2')">
+      <button
+        class="btn btn-outline-warning fw-bold mb-2 w-50 m-auto"
+        (click)="chooseFirstChoice('choice2')"
+      >
         {{ lightNovel.story.firstChoice.choice2 }}
       </button>
     </div>
   </div>
+  <div class="row justify-content-center mt-5 d-none d-md-flex">
+    <span class="loader"></span>
+  </div>
 
   <!-- Part 2A -->
   <div class="row" *ngIf="currentPart === 'part2A'">
-    <div class="col">
-      <p>{{ lightNovel.story.part2.part2A }}</p>
-      <button class="btn btn-primary" (click)="chooseSecondChoice('choice1')">
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part2.part2A }}
+      </p>
+      <button
+        class="btn btn-outline-warning fw-bold mb-2 w-md-50 m-auto"
+        (click)="chooseSecondChoice('choice1')"
+      >
         {{ lightNovel.story.secondChoice.choice1 }}
       </button>
-      <button class="btn btn-primary" (click)="chooseSecondChoice('choice2')">
+      <button
+        class="btn btn-outline-warning fw-bold w-md-50 m-auto"
+        (click)="chooseSecondChoice('choice2')"
+      >
         {{ lightNovel.story.secondChoice.choice2 }}
       </button>
     </div>
@@ -46,12 +68,20 @@
 
   <!-- Part 2B -->
   <div class="row" *ngIf="currentPart === 'part2B'">
-    <div class="col">
-      <p>{{ lightNovel.story.part2.part2B }}</p>
-      <button class="btn btn-primary" (click)="chooseSecondChoice('choice3')">
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part2.part2B }}
+      </p>
+      <button
+        class="btn btn-outline-warning fw-bold mb-2 w-md-50 m-auto"
+        (click)="chooseSecondChoice('choice3')"
+      >
         {{ lightNovel.story.secondChoice.choice3 }}
       </button>
-      <button class="btn btn-primary" (click)="chooseSecondChoice('choice4')">
+      <button
+        class="btn btn-outline-warning fw-bold w-md-50 m-auto"
+        (click)="chooseSecondChoice('choice4')"
+      >
         {{ lightNovel.story.secondChoice.choice4 }}
       </button>
     </div>
@@ -59,29 +89,37 @@
 
   <!-- Part 3A -->
   <div class="row" *ngIf="currentPart === 'part3A'">
-    <div class="col">
-      <p>{{ lightNovel.story.part3.part3A }}</p>
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part3.part3A }}
+      </p>
     </div>
   </div>
 
   <!-- Part 3B -->
   <div class="row" *ngIf="currentPart === 'part3B'">
-    <div class="col">
-      <p>{{ lightNovel.story.part3.part3B }}</p>
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part3.part3B }}
+      </p>
     </div>
   </div>
 
   <!-- Part 3C -->
   <div class="row" *ngIf="currentPart === 'part3C'">
-    <div class="col">
-      <p>{{ lightNovel.story.part3.part3C }}</p>
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part3.part3C }}
+      </p>
     </div>
   </div>
 
   <!-- Part 3D -->
   <div class="row" *ngIf="currentPart === 'part3D'">
-    <div class="col">
-      <p>{{ lightNovel.story.part3.part3D }}</p>
+    <div class="col d-flex text-center flex-column justify-content-around">
+      <p class="w-md-50 m-auto mt-2 mb-5">
+        {{ lightNovel.story.part3.part3D }}
+      </p>
     </div>
   </div>
 </div>
