--- a/angular/src/app/pages/light-novel-details/light-novel-details.component.scss
+++ b/angular/src/app/pages/light-novel-details/light-novel-details.component.scss
@@ -1,7 +1,77 @@
+@import url("https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 .container-fluid {
   min-height: 80vh;
 
   p {
     color: white;
+    font-family: "Lexend", sans-serif;
+  }
+}
+
+.card {
+  backdrop-filter: blur(14px);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.card-title {
+  font-family: "Arimo", sans-serif;
+}
+
+.card-text {
+  font-family: "Lexend", sans-serif;
+}
+
+.loader {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 6rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  animation: pulsOut 1.8s ease-in-out infinite;
+  filter: drop-shadow(0 0 1rem rgba(255, 239, 22, 0.75));
+}
+.loader:before {
+  width: 100%;
+  padding-bottom: 100%;
+  box-shadow: inset 0 0 0 1rem #ffc107;
+  animation-name: pulsIn;
+}
+.loader:after {
+  width: calc(100% - 2rem);
+  padding-bottom: calc(100% - 2rem);
+  box-shadow: 0 0 0 0 #ffc107;
+}
+
+@keyframes pulsIn {
+  0% {
+    box-shadow: inset 0 0 0 1rem #ffc107;
+    opacity: 1;
+  }
+  50%,
+  100% {
+    box-shadow: inset 0 0 0 0 #ffc107;
+    opacity: 0;
+  }
+}
+
+@keyframes pulsOut {
+  0%,
+  50% {
+    box-shadow: 0 0 0 0 #ffc107;
+    opacity: 0;
+  }
+  100% {
+    box-shadow: 0 0 0 1rem #ffc107;
+    opacity: 1;
   }
 }
