--- a/angular/src/app/shared-components/card-home/card-home.component.scss
+++ b/angular/src/app/shared-components/card-home/card-home.component.scss
@@ -21,7 +21,7 @@ a {
     padding-block: 0.25rem;
   }
   h5 {
-    color:#4d3b2a;
+    color: #4d3b2a;
   }
   .bi {
     color: black;
@@ -44,4 +44,8 @@ a {
       display: block;
     }
   }
+}
+
+.bgCustom {
+  background-color: #373e41;
 }
