--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -24,7 +24,7 @@
   <section class="row mt-4">
     <div class="col d-flex align-items-center m-2">
       <div class="me-2">
-        <h6 class="mb-0">FILTER BY:</h6>
+        <h6 class="mb-0 text-warning">FILTER BY:</h6>
       </div>
       <div class="d-none d-md-block">
         <button
